--- a/css/formulaire_inscription.css
+++ b/css/formulaire_inscription.css
@@ -30,6 +30,7 @@ a:hover {
 
 img {
 	width: 100px;
+	height: 56px;
 
 }
 
@@ -44,6 +45,7 @@ img {
 
 #logogris {
 	width: 150px;
+	height: 84px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
