--- a/css/se_connecter.css
+++ b/css/se_connecter.css
@@ -30,6 +30,7 @@ a:hover {
 
 img {
 	width: 100px;
+	height: 56px;
 }
 
 #card {
@@ -43,6 +44,7 @@ img {
 
 #logogris {
 	width: 150px;
+	height: 84px;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
