ajout de lien + un peu de responsive test

--- a/bienvenue/bienvenue.css
+++ b/bienvenue/bienvenue.css
@@ -49,3 +49,8 @@ h2 span {
 	background-color: #151515;
 	box-shadow: 10px 10px 50px rgba(139, 139, 139, 0.349);
 }
+
+a {
+	text-decoration: none;
+	color: #fff;
+}
