--- a/css/formulaire_inscription.css
+++ b/css/formulaire_inscription.css
@@ -20,12 +20,12 @@ header {
 	margin-top: 10px;
 }
 
-a {
+header a {
 	line-height: 50px;
 	text-decoration: none;
 }
 
-a:hover {
+header a:hover {
 	transition: all 0.2s;
 	border-bottom: solid 4px white;
 }
@@ -33,7 +33,6 @@ a:hover {
 img {
 	width: 100px;
 	height: 56px;
-
 }
 
 #card {
@@ -128,4 +127,14 @@ h4 {
 
 h4:hover {
 	text-decoration: underline;
+}
+
+@media (max-width: 700px) {
+	header {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-top: 10px;
+	}
 }
