--- a/css/galerie_photos.css
+++ b/css/galerie_photos.css
@@ -61,12 +61,12 @@ h1 {
 .card img {
 	width: 100%;
 }
-a {
+header a {
 	line-height: 50px;
 	text-decoration: none;
 }
 
-a:hover {
+header a:hover {
 	transition: all 0.2s;
 	border-bottom: solid 4px white;
 }
@@ -94,4 +94,14 @@ h4 {
 
 h4:hover {
 	text-decoration: underline;
+}
+
+@media (max-width: 700px) {
+	header {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-top: 10px;
+	}
 }
