--- a/css/home.css
+++ b/css/home.css
@@ -193,12 +193,12 @@ h1 {
 .titre {
 	margin: 5px;
 }
-a {
+header a {
 	line-height: 50px;
 	text-decoration: none;
 }
 
-a:hover {
+header a:hover {
 	transition: all 0.2s;
 	border-bottom: solid 4px white;
 }
@@ -229,4 +229,14 @@ h4 {
 
 h4:hover {
 	text-decoration: underline;
+}
+
+@media (max-width: 700px) {
+	header {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-top: 10px;
+	}
 }
