--- a/css/poste_photo.css
+++ b/css/poste_photo.css
@@ -84,12 +84,12 @@ h1 {
 	transition: all 0.3s;
 	box-shadow: 0 0 10px #2a2a2ab7;
 }
-a {
+header a {
 	line-height: 50px;
 	text-decoration: none;
 }
 
-a:hover {
+header a:hover {
 	transition: all 0.2s;
 	border-bottom: solid 4px white;
 }
@@ -117,4 +117,14 @@ h4 {
 
 h4:hover {
 	text-decoration: underline;
+}
+
+@media (max-width: 700px) {
+	header {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-top: 10px;
+	}
 }
