--- a/css/poste_video.css
+++ b/css/poste_video.css
@@ -124,3 +124,13 @@ h4 {
 h4:hover {
 	text-decoration: underline;
 }
+
+@media (max-width: 700px) {
+	header {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-top: 10px;
+	}
+}
