--- a/css/se_connecter.css
+++ b/css/se_connecter.css
@@ -20,12 +20,12 @@ header {
 	margin-top: 10px;
 }
 
-a {
+header a {
 	line-height: 50px;
 	text-decoration: none;
 }
 
-a:hover {
+header a:hover {
 	transition: all 0.2s;
 	border-bottom: solid 4px white;
 }
@@ -132,4 +132,14 @@ h4 {
 
 h4:hover {
 	text-decoration: underline;
+}
+
+@media (max-width: 700px) {
+	header {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-top: 10px;
+	}
 }
