--- a/css/video_click.css
+++ b/css/video_click.css
@@ -53,12 +53,12 @@ h1 {
 .titre {
 	margin: 0.5em 0;
 }
-a {
+header a {
 	line-height: 50px;
 	text-decoration: none;
 }
 
-a:hover {
+header a:hover {
 	transition: all 0.2s;
 	border-bottom: solid 4px white;
 }
@@ -74,7 +74,6 @@ footer {
 	justify-content: space-around;
 	font-size: small;
 	background-color: #2a2a2a;
-
 	margin-top: 100px;
 	width: 100%;
 	height: 100px;
@@ -86,4 +85,57 @@ h4 {
 
 h4:hover {
 	text-decoration: underline;
+}
+@media (max-width: 1000px) {
+	header {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-top: 10px;
+	}
+	.card {
+		width: 80%;
+		padding: 1em 0.5em;
+	}
+	body {
+		margin: 10px 10px;
+	}
+}
+
+@media (max-width: 700px) {
+	header {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-top: 10px;
+	}
+	.card {
+		width: 100%;
+		padding: 1em 0.5em;
+	}
+	body {
+		margin: 10px 10px;
+	}
+	footer {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin-top: 2em;
+		height: auto;
+	}
+	.block1 {
+		text-align: center;
+	}
+	.block2 {
+		text-align: center;
+	}
+	.block3 {
+		text-align: center;
+	}
+	.block4 {
+		text-align: center;
+	}
 }
