--- a/css/galerie.css
+++ b/css/galerie.css
@@ -122,6 +122,29 @@ header a:hover {
 	transition-delay: 0s, 0.5s, 1s, 1s;
 }
 
+footer {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	font-size: small;
+	background-color: #2a2a2a;
+	position: relative;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin-top: 100px;
+	width: 100%;
+	height: 100px;
+}
+
+h4 {
+	margin: 10px;
+}
+
+h4:hover {
+	text-decoration: underline;
+}
+
 @media (max-width: 700px) {
 	header {
 		display: flex;
