--- a/css/poste_photo.css
+++ b/css/poste_photo.css
@@ -47,6 +47,11 @@ h1 {
 	height: 20em;
 	background-color: #2a2a2ab7;
 }
+.parcourir img {
+	
+	height: 20em;
+	
+}
 .pseudo {
 	margin: 10px 0;
 	color: #151515;
