--- a/css/formulaire_inscription.css
+++ b/css/formulaire_inscription.css
@@ -35,7 +35,7 @@ img {
 	height: 56px;
 }
 
-#card {
+.card {
 	background-color: #2a2a2a;
 	width: 60%;
 	margin: auto;
@@ -58,23 +58,27 @@ h1 {
 
 h2 {
 	font-size: 20px;
-	margin: 20px;
+	margin: 0 10px;
+	text-align: center;
+	align-items: center;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	width: 100%;
 }
 
 .informations {
-	display: flex;
-	flex-direction: row;
 }
 
 .liste_informations {
-	width: 70%;
+	width: 100%;
 	text-align: center;
 	margin: 30px 0;
 }
 
 .liste_input {
-	width: 70%;
-	margin: 35px 0;
+	width: 100%;
+	margin: 35px auto;
 }
 
 input {
@@ -84,6 +88,12 @@ input {
 	border: black;
 	background-color: #151515;
 	padding-left: 10px;
+}
+
+.line {
+	display: flex;
+	flex: row;
+	justify-content: center;
 }
 
 .buttons {
@@ -129,12 +139,61 @@ h4:hover {
 	text-decoration: underline;
 }
 
+@media (max-width: 1100px) {
+	body {
+		padding: 10px 10px;
+	}
+	.card {
+		width: 80%;
+		padding: 1em 0.5em;
+	}
+	.informations {
+		width: 100%;
+	}
+}
+
 @media (max-width: 700px) {
+	body {
+		padding: 10px 10px;
+	}
 	header {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
 		margin-top: 10px;
+	}
+	.card {
+		width: 100%;
+		padding: 1em 0.5em;
+	}
+	.informations {
+		width: 100%;
+	}
+
+	footer {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin-top: 2em;
+		height: auto;
+	}
+	.block1 {
+		text-align: center;
+	}
+	.block2 {
+		text-align: center;
+	}
+	.block3 {
+		text-align: center;
+	}
+	.block4 {
+		text-align: center;
+	}
+}
+@media (max-width: 400px) {
+	h2 {
+		font-size: 10px;
 	}
 }
