--- a/css/galerie.css
+++ b/css/galerie.css
@@ -122,7 +122,7 @@ header a:hover {
 	transition-delay: 0s, 0.5s, 1s, 1s;
 }
 
-footer {
+/*footer {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
@@ -144,6 +144,11 @@ h4 {
 h4:hover {
 	text-decoration: underline;
 }
+
+.block4 img {
+	width: 100px;
+	height: 56px;
+}*/
 
 @media (max-width: 700px) {
 	header {
