--- a/css/modif_profil.css
+++ b/css/modif_profil.css
@@ -25,6 +25,16 @@ header img {
 	height: 56px;
 }
 
+header a {
+	line-height: 50px;
+	text-decoration: none;
+}
+
+header a:hover {
+	transition: all 0.2s;
+	border-bottom: solid 4px white;
+}
+
 h1 {
 	text-align: center;
 	text-decoration: underline;
@@ -40,7 +50,8 @@ h2 {
 .informationsdeprofil {
 	background-color: #2a2a2a;
 	width: 70%;
-	margin: 10px auto;
+	margin: 40px auto;
+	padding: 10px 0;
 }
 
 .infoavatar {
@@ -54,12 +65,44 @@ h2 {
 }
 
 .infotext p {
-	margin: 10px 0;
+	margin: 0 0;
 	font-size: large;
 }
-
+.imgavatar {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
 .imgavatar img {
 	border-radius: 50%;
+}
+
+input {
+	background-color: #151515;
+	border: none;
+	padding: 12px 5px;
+	margin-top: 2px;
+}
+
+.label-file {
+	cursor: pointer;
+	color: #fff;
+	font-weight: bold;
+	margin-top: 10px;
+}
+.label-file:hover {
+	color: #25a5c4;
+}
+
+/* et on masque le input*/
+.input-file {
+	display: none;
+}
+
+.infotext p {
+	margin-top: 10px;
+	margin-bottom: 2px;
 }
 
 #avatar {
@@ -77,11 +120,13 @@ h2 {
 button {
 	background-color: #151515;
 	padding: 10px 10px 10px 10px;
-	margin: 20px 0;
+	margin: 2px 0;
+	margin-bottom: 5px;
 	height: 40px;
 	border: none;
 	font-size: 15px;
 	font-weight: bold;
+	transition: 0.5s;
 }
 
 button:hover {
@@ -181,16 +226,6 @@ button:hover {
 	margin: 20px auto;
 }
 
-header a {
-	line-height: 50px;
-	text-decoration: none;
-}
-
-header a:hover {
-	transition: all 0.2s;
-	border-bottom: solid 4px white;
-}
-
 .block4 img {
 	width: 100px;
 	height: 56px;
@@ -219,6 +254,20 @@ h4:hover {
 	text-decoration: underline;
 }
 
+@media (max-width: 1100px) {
+	.infoavatar {
+		display: flex;
+		flex-direction: column;
+		margin: 0 10%;
+	}
+	body {
+		margin: 10px 10px;
+	}
+	.informationsdeprofil {
+		width: 90%;
+	}
+}
+
 @media (max-width: 700px) {
 	header {
 		display: flex;
@@ -226,5 +275,11 @@ h4:hover {
 		align-items: center;
 		justify-content: center;
 		margin-top: 10px;
+	}
+	body {
+		margin: 10px 10px;
+	}
+	.informationsdeprofil {
+		width: 100%;
 	}
 }
