--- a/css/modif_profil.css
+++ b/css/modif_profil.css
@@ -76,6 +76,7 @@ h2 {
 }
 .imgavatar img {
 	border-radius: 50%;
+	margin: 10px;
 }
 
 input {
@@ -101,7 +102,7 @@ input {
 }
 
 .infotext p {
-	margin-top: 10px;
+	margin-top: 15px;
 	margin-bottom: 2px;
 }
 
@@ -254,7 +255,7 @@ h4:hover {
 	text-decoration: underline;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1280px) {
 	.infoavatar {
 		display: flex;
 		flex-direction: column;
