--- a/css/profil.css
+++ b/css/profil.css
@@ -180,6 +180,14 @@ button:hover {
 	justify-content: space-between;
 	margin: 20px auto;
 }
+.poste img {
+	transition: 1s;
+}
+.poste img:hover {
+	box-shadow: 0 0 50px #fff;
+	transform: scale(1.2);
+	z-index: 1;
+}
 
 header a {
 	line-height: 50px;
@@ -219,6 +227,16 @@ h4:hover {
 	text-decoration: underline;
 }
 
+@media (max-width: 1529px) {
+	.poste {
+		width: 70%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin: 20px auto;
+	}
+}
 @media (max-width: 700px) {
 	header {
 		display: flex;
