--- a/css/home.css
+++ b/css/home.css
@@ -168,12 +168,16 @@ h1 {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
+	align-items: center;
 }
 .card {
 	background-color: #2a2a2a;
 	margin: 10px;
 	padding: 10px;
 	transition-duration: 1s;
+	flex: 0 0 auto;
+	width: 25%;
+	height: 100%;
 }
 .card:hover {
 	background-color: #ffffff;
