--- a/css/galerie_videos.css
+++ b/css/galerie_videos.css
@@ -39,9 +39,10 @@ h1 {
 }
 .card {
 	background-color: #2a2a2a;
-	margin: 1.5em auto;
+	margin: 1.5em 0;
 	padding: 10px;
 	width: 22%;
+	transition-duration: 1s;
 }
 .card:hover {
 	background-color: #ffffff;
@@ -50,6 +51,10 @@ h1 {
 	padding: 10px;
 	transition: all 0.5s;
 	box-shadow: 0 0 1em #fff;
+	transform: scale(1.3);
+	z-index: 1;
+	/*transition-duration: 0.5s;*/
+	/*transition-delay: 0.5s;*/
 }
 .card:hover p,
 .card:hover h3 {
