--- a/css/poste_video.css
+++ b/css/poste_video.css
@@ -31,13 +31,30 @@ h1 {
 	font-size: 50px;
 	margin: 20px;
 }
-.photos {
-}
 .card {
 	background-color: #e9e9e9;
 	margin: 1.5em auto;
 	padding: 1em 6em;
 	width: 70%;
+}
+.ajoute {
+	display: flex;
+	flex-direction: column;
+	margin: 10px 0;
+}
+.ajoute .label-file {
+	cursor: pointer;
+	color: #2a2a2a;
+	font-weight: bold;
+}
+.ajoute .label-file:hover {
+	color: #25a5c4;
+}
+.ajoute .input-file {
+	display: none;
+}
+.ajoute input {
+	border: none;
 }
 .ajoute a {
 	display: flex;
@@ -125,6 +142,23 @@ h4:hover {
 	text-decoration: underline;
 }
 
+@media (max-width: 1000px) {
+	header {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-top: 10px;
+	}
+	.card {
+		width: 80%;
+		padding: 1em 0.5em;
+	}
+	body {
+		margin: 10px 10px;
+	}
+}
+
 @media (max-width: 700px) {
 	header {
 		display: flex;
@@ -132,5 +166,32 @@ h4:hover {
 		align-items: center;
 		justify-content: center;
 		margin-top: 10px;
+	}
+	.card {
+		width: 100%;
+		padding: 1em 0.5em;
+	}
+	body {
+		margin: 10px 10px;
+	}
+	footer {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin-top: 2em;
+		height: auto;
+	}
+	.block1 {
+		text-align: center;
+	}
+	.block2 {
+		text-align: center;
+	}
+	.block3 {
+		text-align: center;
+	}
+	.block4 {
+		text-align: center;
 	}
 }
