--- a/css/profil.css
+++ b/css/profil.css
@@ -170,9 +170,6 @@ button:hover {
 	transition-delay: 0s, 0.5s, 1s, 1s;
 }
 
-.poste img {
-}
-
 .poste {
 	width: 70%;
 	display: flex;
@@ -236,6 +233,22 @@ h4:hover {
 		align-items: center;
 		margin: 20px auto;
 	}
+	.poste img {
+		margin-bottom: 20px;
+	}
+}
+@media (max-width: 914px) {
+	.infoavatar {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin: 0 10%;
+	}
+	.informationsdeprofil {
+		width: 100%;
+		margin: 10px auto;
+	}
 }
 @media (max-width: 700px) {
 	header {
@@ -244,5 +257,38 @@ h4:hover {
 		align-items: center;
 		justify-content: center;
 		margin-top: 10px;
+	}
+	.buttonsphotovideos {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+	}
+	body {
+		margin: 10px 10px;
+	}
+	.poste img {
+		transform: scale(0.8);
+	}
+	footer {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin-top: 2em;
+		height: auto;
+	}
+	.block1 {
+		text-align: center;
+	}
+	.block2 {
+		text-align: center;
+	}
+	.block3 {
+		text-align: center;
+	}
+	.block4 {
+		text-align: center;
 	}
 }
