commmit des sessions

--- a/css/galerie_videos.css
+++ b/css/galerie_videos.css
@@ -43,6 +43,10 @@ h1 {
 	flex-wrap: wrap;
 	flex-direction: row;
 	justify-content: space-evenly;
+	align-items: center;
+}
+.card a{
+	text-decoration: none;
 }
 .card {
 	background-color: #2a2a2a;
@@ -50,6 +54,7 @@ h1 {
 	padding: 10px;
 	width: 22%;
 	transition-duration: 1s;
+	align-items: center;
 }
 .card:hover {
 	background-color: #ffffff;
