--- a/css/poste_video.css
+++ b/css/poste_video.css
@@ -37,6 +37,9 @@ h1 {
 	padding: 1em 6em;
 	width: 70%;
 }
+.card a{
+	text-decoration: none;
+}
 .ajoute {
 	display: flex;
 	flex-direction: column;
