--- a/css/poste_video.css
+++ b/css/poste_video.css
@@ -37,7 +37,7 @@ h1 {
 	padding: 1em 6em;
 	width: 70%;
 }
-.card a{
+.card a {
 	text-decoration: none;
 }
 .ajoute {
@@ -65,13 +65,20 @@ h1 {
 	color: #2a2a2a;
 	margin: 5px 0;
 }
-.card img {
+/*.card img {
 	width: 100%;
-}
+}*/
 .parcourir {
 	width: 100%;
 	height: 20em;
 	background-color: #2a2a2ab7;
+	text-align: center;
+	align-items: center;
+	flex: 0 0 auto;
+}
+.parcourir img {
+	max-width: 100%;
+	height: 320px;
 }
 .pseudo {
 	margin: 10px 0;
