--- a/css/galerie_photos.css
+++ b/css/galerie_photos.css
@@ -54,13 +54,20 @@ h1 {
 }
 .card {
 	background-color: #2a2a2a;
-	margin: 1.5em 0;
+	margin: 10px;
 	padding: 10px;
-	width: 22%;
 	transition-duration: 1s;
 	align-items: center;
+	flex: 0 0 auto;
+	width: 25%;
+	height: 25%;
+	text-align: center;
 }
-.card a{
+.card img {
+	max-width: 100%;
+	height: 300px;
+}
+.card a {
 	text-decoration: none;
 }
 .card:hover {
@@ -81,11 +88,11 @@ h1 {
 	/*transition-duration: 0.5s;*/
 	/*transition-delay: 0.5s;*/
 }
+.card p {
+	text-align: left;
+}
 .titre {
 	margin: 0.5em 0;
-}
-.card img {
-	width: 100%;
 }
 header a {
 	line-height: 50px;
@@ -122,6 +129,35 @@ h4:hover {
 	text-decoration: underline;
 }
 
+@media (max-width: 1400px) {
+	.photos {
+		display: flex;
+		flex-direction: column;
+	}
+	body {
+		margin: 10px 10px;
+	}
+	.card {
+		background-color: #2a2a2a;
+		margin: 10px;
+		padding: 10px;
+		transition-duration: 1s;
+		align-items: center;
+		flex: 0 0 auto;
+		width: 50%;
+		height: 25%;
+		text-align: center;
+	}
+	.card:hover {
+		transform: scale(1.1);
+	}
+}
+@media (max-width: 1100px) {
+	.card {
+		width: 75%;
+	}
+}
+
 @media (max-width: 700px) {
 	header {
 		display: flex;
@@ -129,5 +165,42 @@ h4:hover {
 		align-items: center;
 		justify-content: center;
 		margin-top: 10px;
+	}
+	.photos {
+		display: flex;
+		flex-direction: column;
+	}
+	body {
+		margin: 10px 10px;
+	}
+	.card {
+		background-color: #2a2a2a;
+		margin: 10px;
+		padding: 10px;
+		transition-duration: 1s;
+		align-items: center;
+		flex: 0 0 auto;
+		width: 85%;
+		height: 25%;
+		text-align: center;
+	}
+	.card:hover {
+		transform: scale(1);
+	}
+}
+@media (max-width: 400px) {
+	.card {
+		background-color: #2a2a2a;
+		margin: 10px;
+		padding: 10px;
+		transition-duration: 1s;
+		align-items: center;
+		flex: 0 0 auto;
+		width: 90%;
+		height: 25%;
+		text-align: center;
+	}
+	body {
+		margin: 10px 0px;
 	}
 }
