--- a/css/galerie_videos.css
+++ b/css/galerie_videos.css
@@ -50,11 +50,18 @@ h1 {
 }
 .card {
 	background-color: #2a2a2a;
-	margin: 1.5em 0;
+	margin: 10px;
 	padding: 10px;
-	width: 22%;
-	transition-duration: 2s;
+	transition-duration: 1s;
 	align-items: center;
+	flex: 0 0 auto;
+	width: 25%;
+	height: 25%;
+	text-align: center;
+}
+.card img {
+	max-width: 100%;
+	height: 300px;
 }
 .card:hover {
 	background-color: #ffffff;
@@ -72,11 +79,11 @@ h1 {
 .card:hover h3 {
 	color: #151515;
 }
+.card p {
+	text-align: left;
+}
 .titre {
 	margin: 0.5em 0;
-}
-.card img {
-	width: 100%;
 }
 header a {
 	line-height: 50px;
@@ -113,6 +120,30 @@ h4:hover {
 	text-decoration: underline;
 }
 
+@media (max-width: 1100px) {
+	.photos {
+		display: flex;
+		flex-direction: column;
+	}
+	body {
+		margin: 10px 10px;
+	}
+	.card {
+		background-color: #2a2a2a;
+		margin: 10px;
+		padding: 10px;
+		transition-duration: 1s;
+		align-items: center;
+		flex: 0 0 auto;
+		width: 50%;
+		height: 25%;
+		text-align: center;
+	}
+	.card:hover {
+		transform: scale(1);
+	}
+}
+
 @media (max-width: 700px) {
 	header {
 		display: flex;
@@ -120,5 +151,42 @@ h4:hover {
 		align-items: center;
 		justify-content: center;
 		margin-top: 10px;
+	}
+	.photos {
+		display: flex;
+		flex-direction: column;
+	}
+	body {
+		margin: 10px 10px;
+	}
+	.card {
+		background-color: #2a2a2a;
+		margin: 10px;
+		padding: 10px;
+		transition-duration: 1s;
+		align-items: center;
+		flex: 0 0 auto;
+		width: 85%;
+		height: 25%;
+		text-align: center;
+	}
+	.card:hover {
+		transform: scale(1);
+	}
+}
+@media (max-width: 400px) {
+	.card {
+		background-color: #2a2a2a;
+		margin: 10px;
+		padding: 10px;
+		transition-duration: 1s;
+		align-items: center;
+		flex: 0 0 auto;
+		width: 90%;
+		height: 25%;
+		text-align: center;
+	}
+	body {
+		margin: 10px 0px;
 	}
 }
