--- a/css/poste_photo.css
+++ b/css/poste_photo.css
@@ -31,27 +31,30 @@ h1 {
 	font-size: 50px;
 	margin: 20px;
 }
-.photos {
-}
+
 .card {
 	background-color: #e9e9e9;
 	margin: 1.5em auto;
 	padding: 1em 6em;
 	width: 70%;
 }
-.card a{
+.card a {
 	text-decoration: none;
 }
-.card img {
+/*.card img {
 	width: 100%;
-}
+}*/
 .parcourir {
 	width: 100%;
 	height: 20em;
 	background-color: #2a2a2ab7;
+	text-align: center;
+	align-items: center;
+	flex: 0 0 auto;
 }
 .parcourir img {
-	height: 20em;
+	max-width: 100%;
+	height: 320px;
 }
 .pseudo {
 	margin: 10px 0;
