--- a/css/video_click.css
+++ b/css/video_click.css
@@ -32,6 +32,14 @@ h1 {
 	margin: 20px;
 }
 .photos {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+}
+.card video {
+	width: 100%;
 }
 .card {
 	background-color: #e9e9e9;
@@ -39,7 +47,7 @@ h1 {
 	padding: 1em 6em;
 	width: 70%;
 }
-.card a{
+.card a {
 	text-decoration: none;
 }
 .card img {
