--- a/css/galerie_photos.css
+++ b/css/galerie_photos.css
@@ -88,6 +88,7 @@ h1 {
 	/*transition-duration: 0.5s;*/
 	/*transition-delay: 0.5s;*/
 }
+
 .card p {
 	text-align: left;
 }
@@ -102,6 +103,17 @@ header a {
 header a:hover {
 	transition: all 0.2s;
 	border-bottom: solid 4px white;
+}
+
+button {
+	background-color: #151515;
+	border: none;
+	padding: 6px;
+}
+button:hover {
+	background-color: #2a2a2a;
+	color: red;
+	transition: 0.2s;
 }
 
 .block4 img {
