--- a/css/home.css
+++ b/css/home.css
@@ -186,6 +186,26 @@ h1 {
 	max-width: 100%;
 	height: 300px;
 }
+.heart button {
+	text-align: right;
+	align-items: flex-end;
+	background-color: #2a2a2a;
+	border: none;
+	transition-duration: 1s;
+}
+
+.card:hover .heart button {
+	background-color: #fff;
+	transition: all 0.5s;
+}
+.heart img {
+	width: 20px;
+	height: 20px;
+}
+.heart button:hover {
+	background-color: #ffffff;
+}
+
 .card a {
 	text-decoration: none;
 }
@@ -200,7 +220,11 @@ h1 {
 	z-index: 1;
 }
 .card:hover p,
-.card:hover h3 {
+.card:hover h3,
+.card:hover h5 {
+	color: #151515;
+}
+.card:hover .heart span {
 	color: #151515;
 }
 
