--- a/css/galerie_photos.css
+++ b/css/galerie_photos.css
@@ -109,6 +109,7 @@ button {
 	background-color: #151515;
 	border: none;
 	padding: 6px;
+	margin-top: 10px;
 }
 button:hover {
 	background-color: #2a2a2a;
