--- a/css/home.css
+++ b/css/home.css
@@ -186,6 +186,13 @@ h1 {
 	max-width: 100%;
 	height: 300px;
 }
+h5 {
+	text-align: center;
+}
+.card h5 img {
+	width: 20px;
+	height: 20px;
+}
 .card a {
 	text-decoration: none;
 }
