--- a/css/galerie_photos.css
+++ b/css/galerie_photos.css
@@ -63,6 +63,30 @@ h1 {
 	height: 25%;
 	text-align: center;
 }
+.heart {
+	display: flex;
+	flex-direction: row-reverse;
+}
+.nblike {
+	margin-left: 5px;
+	margin-top: 5px;
+}
+.heart button {
+	background: none;
+	border: none;
+}
+.heart i.far.fa-heart {
+	font-size: large;
+}
+.card:hover .heart i.far.fa-heart {
+	color: #2a2a2a;
+}
+/*card:hover button:active i.far.fa-heart {
+	color: crimson;
+}*/
+.heart .checked i.far.fa-heart {
+	color: crimson;
+}
 .card img {
 	max-width: 100%;
 	height: 300px;
@@ -83,10 +107,26 @@ h1 {
 	/*transition-delay: 0.5s;*/
 }
 .card:hover p,
-.card:hover h3 {
+.card:hover h3,
+.card:hover h5,
+.card:hover .nblike {
 	color: #151515;
-	/*transition-duration: 0.5s;*/
-	/*transition-delay: 0.5s;*/
+}
+.card:hover .heart span {
+	color: #151515;
+}
+.card:hover .heart .checked i.far.fa-heart {
+	color: crimson;
+}
+
+.heart button {
+	cursor: pointer;
+}
+.heart button {
+	cursor: pointer;
+}
+.heart .checked:hover {
+	cursor: not-allowed;
 }
 
 .card p {
@@ -109,12 +149,7 @@ button {
 	background-color: #151515;
 	border: none;
 	padding: 6px;
-	margin-top: 10px;
-}
-button:hover {
-	background-color: #2a2a2a;
-	color: red;
-	transition: 0.2s;
+	margin-top: 0px;
 }
 
 .block4 img {
