--- a/css/galerie_videos.css
+++ b/css/galerie_videos.css
@@ -45,6 +45,48 @@ h1 {
 	justify-content: space-evenly;
 	align-items: center;
 }
+.heart {
+	display: flex;
+	flex-direction: row-reverse;
+}
+.nblike {
+	margin-left: 5px;
+}
+.heart button {
+	background: none;
+	border: none;
+}
+.heart i.far.fa-heart {
+	font-size: large;
+}
+.card:hover .heart i.far.fa-heart {
+	color: #2a2a2a;
+}
+/*card:hover button:active i.far.fa-heart {
+	color: crimson;
+}*/
+.heart .checked i.far.fa-heart {
+	color: crimson;
+}
+.card:hover p,
+.card:hover h3,
+.card:hover h5,
+.card:hover .nblike {
+	color: #151515;
+}
+.card:hover .heart span {
+	color: #151515;
+}
+.card:hover .heart .checked i.far.fa-heart {
+	color: crimson;
+}
+
+.heart button {
+	cursor: pointer;
+}
+.heart .checked:hover {
+	cursor: not-allowed;
+}
 .card a {
 	text-decoration: none;
 }
@@ -94,18 +136,18 @@ header a:hover {
 	transition: all 0.2s;
 	border-bottom: solid 4px white;
 }
-button {
+.suppr button {
 	background-color: #151515;
 	border: none;
 	padding: 6px;
 	margin-top: 10px;
 }
-button:hover {
+.suppr button:hover {
 	background-color: #2a2a2a;
 	color: red;
 	transition: 0.2s;
 }
-.block4 img {
+*/ .block4 img {
 	width: 100px;
 	height: 56px;
 }
